# nostr

./: .gitignore  CHANGELOG.md  CLAUDE.md  run-ci-checks.sh
crates/nostr/: repomix-output.txt
crates/nostr-lmdb/: Cargo.toml  README.md
crates/nostr-lmdb/examples/: automatic_batching_demo.rs  batched_delete_demo.rs  batched_operations_demo.rs  transaction_api.rs  transaction_api_demo.rs
crates/nostr-lmdb/src/: lib.rs
crates/nostr-lmdb/src/store/: error.rs  ingester.rs  mod.rs  transaction.rs
crates/nostr-lmdb/src/store/lmdb/: config.rs  mod.rs
crates/nostr-lmdb/src/store/types/: filter.rs
crates/nostr-lmdb/tests/: debug_coordinate_value.rs  scoped_tests.rs  simple_deletion.rs  test_automatic_batching.rs  test_coordinate_deletion.rs  test_deletion_flow.rs  test_indexing_issue.rs  test_issue_events.rs  test_transactions.rs
database/nostr-lmdb/: CHANGELOG.md  Cargo.toml
database/nostr-lmdb/src/: lib.rs
database/nostr-lmdb/src/store/: error.rs  ingester.rs  mod.rs
database/nostr-lmdb/src/store/lmdb/: mod.rs
database/nostr-lmdb/tests/: scoped_tests.rs
